# agent.b8-plugin

./: .gitignore  README.md
a0.b8-plugin/: .env.example  .gitignore  FILEMAP.md  INIT.md  QUICKSTART.md  README.md  final_restored_char.json  pyproject.toml  requirements.txt  restored_char.json
a0.b8-plugin/bithub/: README.md  __init__.py  bithub.py  bithub_auth.py  bithub_chat_realtime.py  bithub_comms.py  bithub_comms_schemas.json  bithub_config.py  bithub_cores.py  bithub_errors.py  bithub_janitor.py  bithub_logging.py  bithub_registry.py  plugin.py
a0.b8-plugin/docs/: ARCHITECTURE_SUMMARY.md  a0_b8_analysis_report.md
a0.b8-plugin/scripts/: README.md  fetch_core_data.py  fetch_topology.py  setup_env.py  setup_mcp.py
a0.b8-plugin/tests/: __init__.py  conftest.py  test_chat_connectivity.py  test_cli.py  test_comms.py  test_cores.py  test_guards.py  test_janitor.py  test_multiturn.py
elizaos.b8-plugin/: README.md
hermes.b8-plugin/: README.md  __init__.py  client.py  plugin.yaml  tools.py
hermes.b8-plugin/tests/: test_b8_plugin.py
openclaw.b8-plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw.b8-plugin/src/: client.ts  index.test.ts  index.ts
